<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/paginaInicio"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menuPaginaInicio" />
        <item
            android:id="@+id/videoView"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menuVideoView" />
        <item
            android:id="@+id/calendarView"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menuCalendarView" />
        <item
            android:id="@+id/progressbar"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menuProgressbar" />
        <item
            android:id="@+id/seekbar"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menuSeekbar" />

        <item
            android:id="@+id/horizontalDivider"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menuHorizontalDivider" />
        <item
            android:id="@+id/searchView"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menuSearchView" />
        <item
            android:id="@+id/ratingbar"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menuRatingbar" />

    </group>
</menu>